--- a/realestate-1/src/index.css
+++ b/realestate-1/src/index.css
@@ -29,3 +29,9 @@ body {
   margin: auto;
 }
 
+.btn {
+  color: #fff;
+  padding: 12px 24px;
+  background-image: linear-gradient(45deg, #b45b17, 0%, #8e3404 100%);
+}
+
