--- a/realestate-1/src/index.css
+++ b/realestate-1/src/index.css
@@ -33,5 +33,10 @@ body {
   color: #fff;
   padding: 12px 24px;
   background-image: linear-gradient(45deg, #b45b17, 0%, #8e3404 100%);
+  border: none;
+  border-radius: 8px;
+  font-size: 1rem;
+  transition: .4s;
+  cursor: pointer;
 }
 
