--- a/realestate-1/src/index.css
+++ b/realestate-1/src/index.css
@@ -40,3 +40,9 @@ body {
   cursor: pointer;
 }
 
+.btn:active {
+  transform: translate(4px);
+  box-shadow: 0px 0px 1px rgba(0,0,0,0,.2);
+  border-bottom: none;
+}
+
