--- a/realestate-1/src/components/Navbar.css
+++ b/realestate-1/src/components/Navbar.css
@@ -6,3 +6,12 @@
     background-color: #fff;
     border-bottom: 1px solid #eee;
 }
+
+
+.navbar .container {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+}
