--- a/realestate-1/src/components/Navbar.css
+++ b/realestate-1/src/components/Navbar.css
@@ -35,3 +35,11 @@
 .icon {
     font-size: 1.5rem;
 }
+
+@media screen and (max-width:940px) {
+    .hamburger {
+        display: block;
+    }
+
+}
+    
