--- a/realestate-1/src/components/Navbar.css
+++ b/realestate-1/src/components/Navbar.css
@@ -41,5 +41,19 @@
         display: block;
     }
 
+    .navbar .nav-menu {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        top: 90px;
+
+        height: 100%;
+        width: 100%;
+        background: rgba(255,255,255, .98);
+        transition: 0.4s ease-in-out;
+        z-index: 10;
+    }
+
 }
     
