--- a/realestate-1/src/components/Navbar.css
+++ b/realestate-1/src/components/Navbar.css
@@ -32,7 +32,7 @@
     display: none;
 }
 
-.icon {
+.navbar .icon {
     font-size: 1.5rem;
 }
 
@@ -47,7 +47,7 @@
         flex-direction: column;
         align-items: center;
         top: 90px;
-
+        right: 100%;
         height: 100%;
         width: 100%;
         background: rgba(255,255,255, .98);
