--- a/realestate-1/src/components/Navbar.css
+++ b/realestate-1/src/components/Navbar.css
@@ -55,5 +55,13 @@
         z-index: 10;
     }
 
+    .navbar .active {
+        right: 0;
+    }
+
+    .navbar .nav-menu li a {
+        font-size: 2rem;
+    }
+
 }
     
