--- a/realestate-1/src/components/hero/Hero.css
+++ b/realestate-1/src/components/hero/Hero.css
@@ -17,3 +17,14 @@
     left: 0;
     z-index: -1;
 }
+
+.hero .content {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    max-width: 700px;
+    margin: auto;
+    padding: 1rem;
+}
