--- a/realestate-1/src/components/hero/Hero.css
+++ b/realestate-1/src/components/hero/Hero.css
@@ -33,3 +33,9 @@
     font-size: 3.5rem;
     text-transform: capitalize;
 }
+
+.hero .search-text {
+    margin: 1.5rem;
+    font-size: 1.4rem;
+
+}
