--- a/realestate-1/src/components/hero/Hero.css
+++ b/realestate-1/src/components/hero/Hero.css
@@ -39,3 +39,14 @@
     font-size: 1.4rem;
 
 }
+
+.search {
+    display: flex;
+    background-color: #fff;
+    color: #333;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid #ccc;
+    padding: 4px;
+    border-radius: 8px;
+}
