--- a/realestate-1/src/components/hero/Hero.css
+++ b/realestate-1/src/components/hero/Hero.css
@@ -82,3 +82,17 @@
     border-radius: 8px;
     cursor: pointer;
 }
+
+@media screen and (max-width: 940px) {
+    .hero {
+        height: 70vh;
+    }
+
+    .hero h1 {
+        font-size: 2.5rem
+    }
+
+    .search input[type=text] {
+        width: 100%;
+    }
+}
