--- a/realestate-1/src/components/great/Great.css
+++ b/realestate-1/src/components/great/Great.css
@@ -28,3 +28,20 @@
 .best img {
     width: 100%;
 }
+
+@media screen and (max-width:940px) {
+    .best {
+        margin: 1rem 0;
+    }
+
+    .best > div p {
+        margin: 1rem;
+        font-size: 1rem;
+    }
+
+    .best .container {
+        grid-template-columns: 1fr;
+        grid-gap: .5rem;
+    }
+    
+}
