--- a/realestate-1/src/components/featured/Featured.css
+++ b/realestate-1/src/components/featured/Featured.css
@@ -69,3 +69,38 @@
     font-weight: 600;
     margin-left: 1rem;
 }
+
+@media screen and (max-width: 1024px) {
+    .featured .container {
+        --num-cols: 2;
+        --row-height: 200px;
+        --gap: .5rem;
+    }
+
+    .span-3{
+        grid-column: span 2;
+    }
+
+    .order-1 {
+        order: 1;
+    }
+    .order-2 {
+        order: 2;
+    }
+    .order-3 {
+        order: 3;
+    }
+    .order-4 {
+        order: 4;
+    }
+    .order-5 {
+        order: 5;
+    }
+    .order-6 {
+        order: 6;
+    }
+    .order-7 {
+        order: 7;
+    }
+}
+
