--- a/realestate-1/src/components/footer/Footer.css
+++ b/realestate-1/src/components/footer/Footer.css
@@ -6,7 +6,7 @@
 
 .footer .container {
     display: grid;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(4, 1fr);
     gap: 1.2rem;
 }
 
